# pyember

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  amor.py  main.py  make_images.sh  net.py  playground.ipynb  playground.py  pyproject.toml  run_tests.sh  setup.py
.github/: build-wheels-macos-arm64.yml  build-wheels-win-amd64.yml  run-tests-win-amd64.yml
.github/workflows/: build-wheels-macos-arm64.yml  build-wheels-win-amd64.yml  build-wheels.yml  build_wheels.yml  check-builds.yml  publish-pypi.yml  publish-testpypi.yml  run-tests-macos-arm64.yml  run-tests-manylinux-arm64.yml  run-tests-win-amd64.yml  run-tests.yml  tests.yml
aten/: CMakeLists.txt  README.md  main.cpp
aten/bindings/: CMakeLists.txt  aten_binding.cpp  basetensor_binding.cpp  common.hpp  gradtensor_binding.cpp  scalartensor_binding.cpp  tensor_binding.cpp
aten/bindings/Tensor/: basetensor_binding.cpp  gradtensor_binding.cpp  tensor_binding.cpp
aten/src/: CMakeLists.txt  Tensor.h  Tensor_Algebra.cpp  Tensor_Constructors.cpp  Tensor_Grad.cpp  Tensor_IO.cpp  Tensor_Index.cpp  Tensor_Integrity.cpp  Tensor_Util.cpp  Tensor_View.cpp  utils.cpp  utils.h
aten/src/BaseTensor/: base.cpp  comparison.cpp  index_slice.cpp  integrity.cpp  io.cpp  util.cpp  view.cpp
aten/src/GradTensor/: algebra.cpp  base.cpp  comparison.cpp  constructor.cpp  constructors.cpp  math.cpp  shape.cpp  util.cpp
aten/src/ScalarTensor/: constructor.cpp  constructors.cpp  math.cpp  util.cpp
aten/src/Tensor/: Tensor.h  algebra.cpp  backprop.cpp  base.cpp  comparison.cpp  constructor.cpp  constructors.cpp  grad.cpp  math.cpp  string.cpp  util.cpp
aten/src/Tensor/BaseTensor/: base.cpp  comparison.cpp  index.cpp  string.cpp
aten/src/Tensor/GradTensor/: algebra.cpp  comparison.cpp  constructor.cpp  index.cpp  math.cpp  shape.cpp  string.cpp
aten/src/Tensor/Tensor/: algebra.cpp  backprop.cpp  comparison.cpp  constructor.cpp  index.cpp  math.cpp  shape.cpp
aten/src/Util/: utils.cpp  utils.h
aten/test/: CMakeLists.txt  Tensor_Constructors_tests.cpp  Tensor_Grad_tests.cpp  tensor_test.cpp
aten/test/BaseTensor/: view_tests.cpp
aten/test/GradTensor/: algebra_tests.cpp  constructors_tests.cpp  util_tests.cpp
aten/test/ScalarTensor/: constructors_tests.cpp  math_tests.cpp  util_tests.cpp
aten/test/Tensor/: algebra_tests.cpp  constructors_tests.cpp  grad_tests.cpp  math_tests.cpp
aten/test/Tensor/GradTensor/: algebra_tests.cpp  constructors_tests.cpp  util_tests.cpp
aten/test/Tensor/Tensor/: algebra_tests.cpp  constructors_tests.cpp
docker/: debian.Dockerfile  debian_amd.Dockerfile  make_images.sh  run.sh  ubuntu.Dockerfile  ubuntu_amd.Dockerfile  ubuntu_arm.Dockerfile
docs/: installation.md  progress.md  pybind.md  structure.md  tensors.md
docs/aten/: GradTensor.md  Tensor.md
ember/: __init__.py  __init__.pyi  dataset.py  model.py  regression.py  tensor_old.py
ember/_CPP/: CMakeLists.txt  a.out  main.cpp  tensor.cpp  tensor.h  tensor_binding.cpp
ember/aten/: Tensor.pyi  __init__.pyi
ember/datasets/: __init__.py  dataloader.py  dataset.py
ember/models/: __init__.py  linreg.py  mlp.py  model.py  net.py  regression.py
ember/models/supervised/: nearest_neighbor.py  tree.py
ember/models/unsupervised/: k_means.py
ember/objectives/: __init__.py  loss.py  regularizer.py
ember/optimizers/: optimizer.py
ember/random/: initializers.py
ember/samplers/: __init__.py  sampler.py
examples/: computation.py  dtree.py  grad_graph_viz.py  graph_viz.py  knn.py  linear_regression.py  net.py  playground.py  pytorch_sim.py  simple.py
examples/models/: knn.py  linreg.py  net.py
pyember.egg-info/: PKG-INFO  SOURCES.txt
test/: benchmarks.py
test/BaseTensor/: util_test.py
test/GradTensor/: algebra_test.py  comparison_test.py  constructor_test.py  index_test.py  math_test.py  shape_test.py  string_test.py  util_test.py
test/ScalarTensor/: constructor_test.py  math_test.py  util_test.py
test/Tensor/: algebra_test.py  constructor_test.py  util_test.py
test/tensor/: backprop.py  gradtensor.py  io.py  scalartensor.py  tensor.py
tests/tensor/: speed.py  test_matrix_operations.py
